--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@taiga-ui/addon-table": "^3.72.0",
     "@taiga-ui/cdk": "^3.72.0",
     "@taiga-ui/core": "^3.72.0",
+    "@taiga-ui/experimental": "^3.72.0",
     "@taiga-ui/icons": "^3.72.0",
     "@taiga-ui/kit": "^3.72.0",
     "@taiga-ui/layout": "^3.72.0",
