--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@taiga-ui/styles": "^3.72.0",
     "@tinkoff/ng-dompurify": "4.0.0",
     "dompurify": "3.0.6",
+    "hijri-converter": "^1.1.1",
     "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
