--- a/angular.json
+++ b/angular.json
@@ -38,6 +38,7 @@
               "node_modules/@taiga-ui/core/styles/taiga-ui-theme.less",
               "node_modules/@taiga-ui/core/styles/taiga-ui-fonts.less",
               "node_modules/@taiga-ui/styles/taiga-ui-global.less",
+              "node_modules/ngx-toastr/toastr.css",
               "src/styles.less"
             ],
             "scripts": []
