--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@ngx-translate/core": "^15.0.0",
+    "@ngx-translate/http-loader": "^8.0.0",
     "@taiga-ui/addon-mobile": "^3.72.0",
     "@taiga-ui/addon-table": "^3.72.0",
     "@taiga-ui/cdk": "^3.72.0",
