--- a/angular.json
+++ b/angular.json
@@ -70,6 +70,7 @@
                   "maximumError": "4kb"
                 }
               ],
+              "optimization": true,
               "outputHashing": "all"
             },
             "development": {
@@ -80,7 +81,7 @@
                 }
               ],
               "buildOptimizer": false,
-              "optimization": false,
+              "optimization": true,
               "vendorChunk": true,
               "extractLicenses": false,
               "sourceMap": true,
